NNCodeTest/force-app/main/default/objects/Lead/fields/Alpha_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_2_Code__c</fullName>
    <label>Alpha 2 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>