NNCodeTest/force-app/main/default/objects/Lead/fields/Alpha_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_3_Code__c</fullName>
    <label>Alpha 3 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>