NNCodeTest/force-app/main/default/objects/Lead/fields/Regional_Blocs__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocs__c</fullName>
    <label>Regional Blocs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>